--- a/client/src/components/home/home.module.css
+++ b/client/src/components/home/home.module.css
@@ -1,6 +1,11 @@
+
+
 .container{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
+    background-image: url('../../assets/bg.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .deliveryInfos{
