--- a/client/src/components/signup/signup.module.css
+++ b/client/src/components/signup/signup.module.css
@@ -2,22 +2,27 @@
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    background-color: #f22a2a;
+    background-color: #f00;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 999999;
+    background-image: url('../../assets/bg.jpg');
+  background-size: cover;
+  background-position: center;
 }
 
 .signUpWrapper{
     border-radius: 20px;
     width: 45vw;
-    height: 60vh;
+    height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 60px;
+    
 }
 
 .signUpLeftSide{
@@ -35,17 +40,18 @@
 .signUpRightSide{
     margin: 0;
     flex: 1;
-    background-color: #fff;
+    background-color:rgba(255, 255, 255, 0.54);;
     height: 100%;
     width: 100%;
     overflow: hidden;
+    border-radius: 5%;
 }
 
 .signUpRightSide > h2{
     text-align: center;
     font-size: 36px;
-    color: #f22a2a;
-    margin-top: 2.5rem;
+    color: #050101;
+    margin: 2.5rem 0;
 }
 
 .signUpRightSide > .signUpForm{
@@ -59,13 +65,11 @@
 }
 
 .signUpForm > input{
-    outline: none;
-    border: none;
-    border-bottom: 1px solid #333;
     width: 50%;
+    height: 50px;
+    background-color: white;
     padding-left: 0.25rem;
     padding-bottom: 0.25rem;
-    transition: 150ms all ease-in-out;
 }
 
 .signUpForm > input:focus{
@@ -93,7 +97,7 @@
 
 .signUpForm > p{
     text-align: center;
-    color: black;
+    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
